# better-text-generator

./: README.md  pyproject.toml
back-end/: Segmind.py  dev-acolyte-442123-f9-724f681a960e.json  llama90B.py  llamatesting11B.py  model.py  ops.py  testing.py  testing2.py  testinglama.py
back-end/api/: pillow.py
back-end/scripts/: detect-text.py  opencv.py  opencv2.py  pillow-script  pillow.py
front-end/: app.py
