[tool.poetry]
name = "better-text-generator"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi[standard] = "^0.115.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
